# Intc_Dashboard

./: LICENSE  README.md  app.py  environment.yaml  environment.yml  link-to-release.ipynb  pyproject.toml  render.yaml  requirements.txt
data/raw/: df_1.csv  df_5.csv
